--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,10 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_sample">SampleActivity</string>
+    <string name="reminder_db">reminders</string>
+    <string name="note_db">notes</string>
+    <string name="checklist_db">checklists</string>
+    <string name="user_db">users</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
