--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,36 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sign_in">Sign In</string>
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="forget_password">Forget Password?</string>
+    <string name="resend_confirmation_email">Resend Confirmation Email</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="already_a_user">Already a user?</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="d_o_b">D.O.B</string>
+    <string name="enter_user_email">Enter User Email</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="add_todo_item">Add Todo Item</string>
+    <string name="cancle">Cancle</string>
+    <string name="add">Add</string>
+    <string name="confirm">Confirm</string>
+    <string name="reset_password">Reset Password</string>
+    <string name="save">Save</string>
+    <string name="add_title">Add Title</string>
+    <string name="add_description">Add Description</string>
+    <string name="date">Date</string>
+    <string name="time">Time</string>
+    <string name="notes_title">Notes Title</string>
+    <string name="sample_desc">jshdakhfasd kjahskjfhasjkfd kjhaskjdfhask kjhasjfhkas</string>
+    <string name="organize">Organize</string>
+    <string name="delete">DELETE</string>
+    <string name="delete_todo_message">Are you sure you want to delete TODO Item?</string>
+    <string name="status_complete">Complete</string>
+    <string name="status_incomplete">Incomplete</string>
+    <string name="delete_note_message">Are you sure you want to delete note?</string>
+
 </resources>
