--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,7 @@
     <string name="status_complete">Complete</string>
     <string name="status_incomplete">Incomplete</string>
     <string name="delete_note_message">Are you sure you want to delete note?</string>
+    <string name="reminder_channel_name">reminder_channel_name</string>
+    <string name="reminder_channel_description">This channel handles reminder notifications</string>
 
 </resources>
